# clinicalmind

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.test.yml  docker-compose.yml
.github/workflows/: ci.yml  eval.yml
apps/api-gateway/: ClinicalMind.Gateway.csproj  Dockerfile  Program.cs  appsettings.Development.json  appsettings.json
apps/api-gateway/Domain/Audit/: AuditRecord.cs
apps/api-gateway/Features/Chat/: ChatEndpoints.cs
apps/api-gateway/Features/Ingest/: IngestEndpoints.cs
apps/api-gateway/Infrastructure/AI/: AiOrchestratorClient.cs
apps/api-gateway/Infrastructure/Redis/: RateLimiter.cs
apps/api-gateway/Middleware/: Middleware.cs
apps/web/: Dockerfile.dev  angular.json  package.json
apps/web/src/: index.html  styles.css
apps/web/src/app/: app.component.ts  app.config.ts
apps/web/src/app/core/services/: api.service.ts  sse.service.ts
apps/web/src/app/core/state/: app.store.ts
apps/web/src/app/features/chat/: chat.component.ts
apps/web/src/app/features/dashboard/: ward-dashboard.component.ts
apps/web/src/app/features/eval/: eval-dashboard.component.ts
apps/web/src/app/shared/components/citation-badge/: citation-badge.component.ts
apps/web/src/app/shared/components/risk-score-card/: risk-score-card.component.ts
apps/web/src/app/shared/directives/: streaming-text.directive.ts
docs/: GITHUB_SETUP.md  generate_interview_prep.js
docs/adr/: 001-vector-database.md  002-agent-framework.md  003-chunking-strategy.md  004-hallucination-prevention.md  005-model-routing.md
docs/architecture/: README.md
docs/eval-results/: index.html
infra/bicep/: main.bicep  params.dev.json
infra/bicep/modules/: acr.bicep  aks.bicep  keyvault.bicep  postgres.bicep  redis.bicep  servicebus.bicep
infra/db/: init.sql
infra/helm/clinicalmind/: Chart.yaml  values.yaml
infra/helm/clinicalmind/templates/: deployments.yaml  services.yaml
services/ai-orchestrator/: Dockerfile  README.md  conftest.py  pyproject.toml
services/ai-orchestrator/src/: config.py
services/ai-orchestrator/src/agents/: deterioration.py  evidence_retrieval.py  note_summarizer.py  supervisor.py  vitals_analyst.py
services/ai-orchestrator/src/api/: main.py
services/ai-orchestrator/src/api/routes/: chat.py  health.py  ingest.py
services/ai-orchestrator/src/llm/: cache.py  prompt_registry.py  router.py
services/ai-orchestrator/src/models/: clinical_state.py
services/ai-orchestrator/src/rag/: chunkers.py
services/ai-orchestrator/tests/unit/: test_orchestrator.py
services/hf-inference/: Dockerfile  README.md  conftest.py  pyproject.toml
services/hf-inference/src/: config.py  main.py
services/hf-inference/src/models/: embeddings.py  ner.py  nli.py  registry.py  reranker.py  table_qa.py  timeseries.py
services/hf-inference/src/routes/: embed.py  health.py  ner.py  nli.py  rerank.py  table_qa.py  timeseries.py
services/hf-inference/tests/unit/: test_ner.py  test_routes.py  test_timeseries.py
