[project]
name = "clinicalmind-ai-orchestrator"
version = "0.1.0"
description = "ClinicalMind AI Orchestration Service — LangGraph multi-agent + RAG pipeline"
requires-python = ">=3.12"

dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.1.0",

    # Config
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # LangGraph + LangChain
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",

    # LlamaIndex for RAG
    "llama-index>=0.11.0",
    "llama-index-vector-stores-postgres>=0.2.0",
    "llama-index-embeddings-openai>=0.2.0",

    # Database
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "pgvector>=0.3.0",

    # Redis (semantic cache + rate limiting)
    "redis[hiredis]>=5.2.0",

    # LLMOps
    "langfuse>=2.0.0",

    # Observability
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",

    # Utils
    "numpy>=2.1.0",
    "tiktoken>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
