[project]
name = "clinicalmind-hf-inference"
version = "0.1.0"
description = "ClinicalMind HuggingFace inference sidecar — 6 clinical AI models"
requires-python = ">=3.12"

dependencies = [
    # API framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",

    # Config
    "pydantic-settings>=2.6.0",
    "pydantic>=2.9.0",

    # HuggingFace ecosystem
    "transformers>=4.47.0",
    "tokenizers>=0.21.0",
    "torch>=2.5.0",
    "sentence-transformers>=3.3.0",

    # Chronos time-series forecasting (Amazon)
    "chronos-forecasting>=1.4.0",

    # Numerical
    "numpy>=2.1.0",
    "pandas>=2.2.0",

    # Observability
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
